refactor: add return value to addPost api
